--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-# theme: jekyll-theme-minimal
-theme: jekyll-theme-chirpy
+theme: jekyll-theme-minimal
 logo: https://i.loli.net/2019/06/01/5cf1f55f3b5ae83085.png
 show_downloads: true
 title: 冲出你的窗口
